--- a/designer/style.css
+++ b/designer/style.css
@@ -31,3 +31,25 @@ html,body {
 .gutter.gutter-horizontal {
     background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
 }
+
+#preview_background {
+	display:flex;
+	align-items: center;
+	justify-content: center;
+	height:100%;
+}
+
+#preview {
+	border : 1px solid #333333;
+	background: white;
+	background-image: radial-gradient(black 1px, transparent 0);
+	background-size: 20px 20px;
+	background-position: -19px -19px;
+	width : 320px;
+	height : 540px;
+}
+
+#preview_iframe {
+	width:100%;
+	height:100%;
+}
