--- a/designer/style.css
+++ b/designer/style.css
@@ -50,6 +50,10 @@ html,body {
 }
 
 #preview_iframe {
+	border : 0px;
 	width:100%;
 	height:100%;
+	margin : 0;
+	padding : 0;
+	overflow: hidden;
 }
